--- a/package.json
+++ b/package.json
@@ -1,16 +1,4 @@
 {
-  "name": "vue-directional-carousel",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
-  },
   "dependencies": {
     "vue": "^3.3.4"
   },
@@ -22,12 +10,24 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.45.0",
+    "eslint": "^8.50.0",
     "eslint-plugin-vue": "^9.15.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.3",
     "typescript": "~5.1.6",
     "vite": "^4.4.6",
     "vue-tsc": "^1.8.6"
-  }
+  },
+  "name": "vue-directional-carousel",
+  "private": true,
+  "scripts": {
+    "build": "run-p type-check build-only",
+    "build-only": "vite build",
+    "dev": "vite",
+    "format": "prettier --write src/",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
+  },
+  "version": "0.0.0"
 }
