--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "peerDependencies": {
+    "vue": "^3.0.0"
+  },
+  "private": true,
+  "name": "vue-directional-carousel",
+  "version": "0.0.1",
+  "description": "This is a Vue 3 component that allows you to set the direction of image movement not only vertically and horizontally but also in different directions (left, right, up, down).",
   "dependencies": {
     "vue": "^3.3.4"
   },
@@ -18,8 +25,6 @@
     "vite": "^4.4.6",
     "vue-tsc": "^1.8.6"
   },
-  "name": "vue-directional-carousel",
-  "private": true,
   "scripts": {
     "build": "run-p type-check build-only",
     "build-only": "vite build",
@@ -28,6 +33,5 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
-  },
-  "version": "0.0.0"
+  }
 }
