--- a/package.json
+++ b/package.json
@@ -6,6 +6,23 @@
   "name": "vue-directional-carousel",
   "version": "0.0.1",
   "description": "This is a Vue 3 component that allows you to set the direction of image movement not only vertically and horizontally but also in different directions (left, right, up, down).",
+  "keywords": [
+    "vue",
+    "carousel",
+    "vertical",
+    "vertically",
+    "horizontally",
+    "directional",
+    "slide",
+    "vue3"
+  ],
+  "bugs": {
+    "email": "codemakim@gmail.com"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "jhkim"
+  },
   "dependencies": {
     "vue": "^3.3.4"
   },
