--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "peerDependencies": {
-    "vue": "^3.0.0"
+    "vue": "^3.3.4"
   },
   "private": true,
   "name": "vue-directional-carousel",
@@ -19,6 +19,19 @@
   "bugs": {
     "email": "codemakim@gmail.com"
   },
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/directional-carousel.umd.cjs",
+  "module": "./dist/directional-carousel.js",
+  "types": "./dist/main.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/directional-carousel.js",
+      "require": "./dist/directional-carousel.umd.js"
+    }
+  },
   "license": "MIT",
   "author": {
     "name": "jhkim"
@@ -27,6 +40,7 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@babel/types": "^7.23.6",
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
     "@types/node": "^18.17.0",
@@ -38,12 +52,12 @@
     "eslint-plugin-vue": "^9.15.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
-    "typescript": "~5.1.6",
+    "typescript": "^5.3.3",
     "vite": "^4.4.6",
     "vue-tsc": "^1.8.6"
   },
   "scripts": {
-    "build": "run-p type-check build-only",
+    "build": "vite build && vue-tsc --emitDeclarationOnly",
     "build-only": "vite build",
     "dev": "vite",
     "format": "prettier --write src/",
