--- a/package.json
+++ b/package.json
@@ -20,16 +20,11 @@
     "email": "codemakim@gmail.com"
   },
   "type": "module",
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/directional-carousel.umd.cjs",
-  "module": "./dist/directional-carousel.js",
-  "types": "./dist/main.d.ts",
   "exports": {
     ".": {
       "import": "./dist/directional-carousel.js",
-      "require": "./dist/directional-carousel.umd.js"
+      "require": "./dist/directional-carousel.umd.js",
+      "types": "./dist/types/main.d.ts"
     }
   },
   "license": "MIT",
@@ -57,7 +52,7 @@
     "vue-tsc": "^1.8.6"
   },
   "scripts": {
-    "build": "vite build && vue-tsc --emitDeclarationOnly",
+    "build": "vite build",
     "build-only": "vite build",
     "dev": "vite",
     "format": "prettier --write src/",
