--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "strict": true,
     "isolatedModules": true,
     "declaration": true,
-    "declarationDir": "./dist/types",
+    "outDir": "./dist",
     "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts"],
