--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier": "^3.0.3",
     "typescript": "^5.3.3",
     "vite": "^4.4.6",
+    "vite-plugin-vue-images": "^0.6.1",
     "vue-tsc": "^1.8.6"
   },
   "scripts": {
