--- a/package.json
+++ b/package.json
@@ -32,25 +32,28 @@
     "name": "jhkim"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.5.11"
   },
   "devDependencies": {
-    "@babel/types": "^7.23.6",
-    "@rushstack/eslint-patch": "^1.3.2",
-    "@tsconfig/node18": "^18.2.0",
-    "@types/node": "^18.17.0",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@babel/types": "^7.25.7",
+    "@rushstack/eslint-patch": "^1.10.4",
+    "@tsconfig/node18": "^18.2.4",
+    "@types/node": "^18.19.54",
+    "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.50.0",
-    "eslint-plugin-vue": "^9.15.1",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.5.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.28.0",
+    "jsdom": "^25.0.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.3",
-    "typescript": "^5.3.3",
-    "vite": "^4.4.6",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8",
     "vite-plugin-vue-images": "^0.6.1",
-    "vue-tsc": "^1.8.6"
+    "vitest": "^2.1.2",
+    "vue-tsc": "^2.1.6"
   },
   "scripts": {
     "build": "vite build && vue-tsc --emitDeclarationOnly",
@@ -61,6 +64,7 @@
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "prepack": "cp package.json dist/package.json",
-    "pack": "npm run prepack && npm pack"
+    "pack": "npm run prepack && npm pack",
+    "test": "vitest"
   }
 }
