--- a/package.json
+++ b/package.json
@@ -16,11 +16,6 @@
     "slide",
     "vue3"
   ],
-  "files": [
-    "dist",
-    "README.md",
-    "LICENSE"
-  ],
   "bugs": {
     "email": "codemakim@gmail.com"
   },
@@ -28,8 +23,7 @@
   "exports": {
     ".": {
       "import": "./dist/vue-directional-carousel.js",
-      "require": "./dist/vue-directional-carousel.umd.js",
-      "types": "./dist/main.d.ts"
+      "require": "./dist/vue-directional-carousel.umd.js"
     }
   },
   "license": "MIT",
@@ -37,7 +31,7 @@
     "name": "jhkim"
   },
   "dependencies": {
-    "vue": "^3.5.11"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@babel/types": "^7.25.7",
@@ -56,6 +50,7 @@
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
+    "vite-plugin-dts": "^4.2.3",
     "vite-plugin-vue-images": "^0.6.1",
     "vitest": "^2.1.2",
     "vue-tsc": "^2.1.6"
