--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "strict": true,
     "isolatedModules": true,
     "declaration": true,
+    "declarationDir": "./dist/types",
     "outDir": "./dist",
     "allowSyntheticDefaultImports": true
   },
