--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
-    "prepack": "cp package.json dist/package.json",
+    "prepack": "cp package.json dist/package.json && cp dist/index.d.ts dist/main.d.ts",
     "pack": "npm run prepack && npm pack",
     "test": "vitest"
   }
